--- a/bcftools/1.5/Dockerfile
+++ b/bcftools/1.5/Dockerfile
@@ -5,7 +5,7 @@ FROM biocontainers/biocontainers:v1.0.0_cv4
 ################## METADATA ######################
 
 LABEL base_image="biocontainers:v1.0.0_cv4"
-LABEL version="2"
+LABEL version="3"
 LABEL software="bcftools"
 LABEL software.version="1.5"
 LABEL about.summary="Bcftools is a program for variant calling and manipulating VCFs and BCFs"
@@ -15,6 +15,7 @@ LABEL about.license_file="https://github.com/samtools/bcftools/blob/develop/LICE
 LABEL about.license="SPDX:MIT"
 LABEL extra.identifiers.biotools="bcftools"
 LABEL about.tags="Genomics"
+LABEL extra.binaries="bcftools"
 
 ################## MAINTAINER ######################
 
@@ -26,4 +27,4 @@ RUN conda install bcftools=1.5
 
 WORKDIR /data/
 
-CMD ["bcftools"]
+# CMD ["bcftools"]
