--- a/fastqc/0.11.5/Dockerfile
+++ b/fastqc/0.11.5/Dockerfile
@@ -3,7 +3,7 @@ FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ################## METADATA ######################
 LABEL base_image="biocontainers:v1.0.0_cv4"
-LABEL version="3"
+LABEL version="4"
 LABEL software="fastqc"
 LABEL software.version="0.11.5"
 LABEL about.summary="A quality control tool for high throughput sequence data."
@@ -13,6 +13,7 @@ LABEL about.license_file="https://www.gnu.org/copyleft/gpl.html"
 LABEL about.license="SPDX:GPL-3.0"
 LABEL extra.identifiers.biotools="fastqc"
 LABEL about.tags="General"
+LABEL extra.binaries="fastqc"
 
 
 ################## MAINTAINER ######################
@@ -64,6 +65,6 @@ ENV PATH /usr/local/bin:$PATH
 
 USER biodocker
 
-CMD fastqc
+# CMD fastqc
 
 WORKDIR /data/
