--- a/bowtie/1.1.2/Dockerfile
+++ b/bowtie/1.1.2/Dockerfile
@@ -5,7 +5,7 @@ FROM biocontainers/biocontainers:v1.0.0_cv4
 ################## METADATA ######################
 
 LABEL base_image="biocontainers:v1.0.0_cv4"
-LABEL version="3"
+LABEL version="4"
 LABEL software="bowtie"
 LABEL software.version="1.1.2"
 LABEL about.summary="an ultrafast memory-efficient short read aligner"
@@ -15,6 +15,7 @@ LABEL about.license_file="http://bowtie-bio.sourceforge.net/index.shtml"
 LABEL about.license="SPDX:Artistic-2.0"
 LABEL extra.identifiers.biotools="bowtie"
 LABEL about.tags="Genomics"
+LABEL extra.binaries="bowtie"
 
 ################## MAINTAINER ######################
 MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
@@ -25,4 +26,4 @@ RUN conda install bowtie=1.1.2
 
 WORKDIR /data/
 
-CMD ["bowtie"]
+# CMD ["bowtie"]
