--- a/samtools/1.7.0/Dockerfile
+++ b/samtools/1.7.0/Dockerfile
@@ -6,7 +6,7 @@ FROM biocontainers/biocontainers:v1.0.0_cv4
 
 ARG software_version=1.7.0
 LABEL base_image="biocontainers:v1.0.0_cv4"
-LABEL version="3"
+LABEL version="4"
 LABEL software="samtools"
 LABEL software.version="$software_version"
 LABEL about.summary="Tools for manipulating next-generation sequencing data"
@@ -17,6 +17,7 @@ LABEL about.license_file="https://github.com/samtools/samtools/blob/develop/LICE
 LABEL about.license="SPDX:MIT"
 LABEL about.tags="Genomics"
 LABEL extra.identifiers.biotools="SAM"
+LABEL extra.binaries="samtools"
 
 ################## MAINTAINER ######################
 MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
@@ -25,4 +26,4 @@ RUN conda install ncurses samtools=$software_version
 
 WORKDIR /data/
 
-CMD ["samtools"]
+# CMD ["samtools"]
