--- a/guppy/3.2.2-cpu/Dockerfile
+++ b/guppy/3.2.2-cpu/Dockerfile
@@ -1,5 +1,17 @@
 # Set the base image to Ubuntu 16.04
 FROM ubuntu:16.04
+LABEL    software="guppy-cpu" \ 
+    container="guppy" \ 
+    about.summary="Basecalling and demultiplexing for Oxford Nanopore reads, CPU version" \ 
+    about.home="https://community.nanoporetech.com/downloads" \
+    software.version="3.2.2" \ 
+    version="1" \ 
+    extra.identifiers.biotools="guppy" \ 
+    about.license="custom, see /usr/share/doc/ont-guppy-cpu/copyright" \ 
+    about.license_file="/usr/share/doc/ont-guppy-cpu/copyright" \ 
+    extra.binaries="/usr/bin/guppy_aligner,/usr/bin/guppy_barcoder,/usr/bin/guppy_basecall_server,/usr/bin/guppy_basecaller,/usr/bin/guppy_basecaller_1d2" \ 
+    about.tags=""
+
 ARG PACKAGE_VERSION=3.2.2
 ARG BUILD_PACKAGES="wget apt-transport-https"
 ARG DEBIAN_FRONTEND=noninteractive
