Update Dockerfile for TALON version 4.4 to create smaller container.

--- a/talon/4.4/Dockerfile
+++ b/talon/4.4/Dockerfile
@@ -1,9 +1,9 @@
 ################## BASE IMAGE ######################
-FROM ubuntu:18.04
+FROM python:3.7-slim
 
 ################## METADATA ######################
-LABEL base_image="ubuntu:18.04"
-LABEL version="1"
+LABEL base_image="python:3.7-slim"
+LABEL version="2"
 LABEL software="talon"
 LABEL software.version="4.4"
 LABEL about.summary="TALON is a Python program for identifying known and novel genes/isoforms in long read transcriptome data sets."
@@ -19,75 +19,16 @@ MAINTAINER SASC <sasc@lumc.nl>
 ################## INSTALLATION ######################
 RUN apt-get clean all && \
     apt-get update && \
-    apt-get upgrade -y && \
-    apt-get install -y \
-        curl \
-        grep \
-        sed \
-        dpkg \
-        fuse \
-        git \
-        wget \
-        zip \
-        build-essential \
-        pkg-config \
-        bzip2 \
-        ca-certificates && \
-    apt-get clean && \
+    apt-get install -y build-essential && \
+    apt-get install -y zlib1g-dev && \
+    apt-get install -y libbz2-dev && \
+    apt-get install -y liblzma-dev && \
+    apt-get install -y git && \
+    pip install pybedtools==0.8.0 && \
+    pip install pandas==0.25.3 && \
+    pip install numpy==1.17.3 && \
+    pip install git+https://github.com/dewyman/TALON.git && \
+    apt-get update && \
+    apt-get clean all && \
     apt-get purge && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh && \
-    /bin/bash ~/miniconda.sh -b -p /opt/conda && \
-    rm ~/miniconda.sh && chmod 777 -R /opt/conda/
-
-RUN TINI_VERSION=`curl https://github.com/krallin/tini/releases/latest | grep -o "/v.*\"" | sed 's:^..\(.*\).$:\1:'` && \
-    curl -L "https://github.com/krallin/tini/releases/download/v${TINI_VERSION}/tini_${TINI_VERSION}.deb" > tini.deb && \
-    dpkg -i tini.deb && \
-    rm tini.deb && \
-    apt-get clean
-
-RUN mkdir /data /config
-
-RUN groupadd fuse && \
-    useradd --create-home --shell /bin/bash --user-group --uid 1000 --groups sudo,fuse biodocker && \
-    echo `echo "biodocker\nbiodocker\n" | passwd biodocker` && \
-    chown biodocker:biodocker /data && \
-    chown biodocker:biodocker /config
-
-USER biodocker
-
-ENV PATH=$PATH:/opt/conda/bin
-ENV PATH=$PATH:/home/biodocker/bin
-ENV HOME=/home/biodocker
-
-RUN mkdir /home/biodocker/bin
-
-RUN conda config --add channels bioconda && \
-    conda upgrade conda
-
-USER root
-
-RUN conda install -y -c bioconda pybedtools && \
-    ZIP=4.4 && \
-    wget https://github.com/dewyman/TALON/archive/${ZIP}.zip -O /tmp/${ZIP}.zip && \
-    unzip /tmp/${ZIP}.zip -d /home/biodocker/bin/ && \
-    rm /tmp/${ZIP}.zip && \
-    rm -rf /home/biodocker/bin/TALON-${ZIP}/testing_suite && \
-    rm -rf /home/biodocker/bin/TALON-${ZIP}/archived && \
-    rm -rf /home/biodocker/bin/TALON-${ZIP}/timing_tests && \
-    rm -rf /home/biodocker/bin/TALON-${ZIP}/example && \
-    rm /home/biodocker/bin/TALON-${ZIP}/diagram.png && \
-    pip install /home/biodocker/bin/TALON-${ZIP} && \
-    apt-get clean && \
-    apt-get purge && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-USER biodocker
-
-VOLUME ["/data", "/config"]
-
-WORKDIR /data
-
-################## TOOL INFO ##################
-# talon_generate_report not working due to R dependencies.
