--- a/control-freec/11.5/Dockerfile
+++ b/control-freec/11.5/Dockerfile
@@ -11,7 +11,7 @@ LABEL software.version="11.5"
 LABEL about.summary="Prediction of copy numbers and allelic content using deep-sequencing data"
 LABEL about.home="http://boevalab.inf.ethz.ch/FREEC/index.html"
 LABEL about.documentation="http://boevalab.inf.ethz.ch/FREEC/index.html"
-LABEL extra.identifiers.biotools="FREEC"
+LABEL extra.identifiers.biotools="freec"
 LABEL about.license="GPL-2+"
 LABEL about.tags="Genomics"
 LABEL container="control-freec"
