Specify version tag in pip install of TALON. (#352)
* Specify git tag in pip install of TALON.

* Change pip syntax to use .tar.gz.

--- a/talon/4.4/Dockerfile
+++ b/talon/4.4/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.7-slim
 
 ################## METADATA ######################
 LABEL base_image="python:3.7-slim"
-LABEL version="2"
+LABEL version="3"
 LABEL software="talon"
 LABEL software.version="4.4"
 LABEL about.summary="TALON is a Python program for identifying known and novel genes/isoforms in long read transcriptome data sets."
@@ -28,7 +28,7 @@ RUN apt-get clean all && \
     pip install pybedtools==0.8.0 && \
     pip install pandas==0.25.3 && \
     pip install numpy==1.17.3 && \
-    pip install git+https://github.com/dewyman/TALON.git && \
+    pip install https://github.com/dewyman/TALON/archive/4.4.tar.gz && \
     apt-get update && \
     apt-get clean all && \
     apt-get purge && \
