add openjdk to container and set fastqc executable rights, Closes #375

--- a/fastqc/0.11.9/Dockerfile
+++ b/fastqc/0.11.9/Dockerfile
@@ -3,7 +3,7 @@ FROM biocontainers/biocontainers:v1.1.0_cv2
 
 ################## METADATA ######################
 LABEL base_image="biocontainers:v1.1.0_cv2"
-LABEL version="5"
+LABEL version="6"
 LABEL software="fastqc"
 LABEL software.version="0.11.9"
 LABEL about.summary="A quality control tool for high throughput sequence data."
@@ -28,12 +28,14 @@ ENV FOLDER=FastQC
 ENV DST=/home/biodocker/bin
 ENV ULOCAL=/usr/local/bin
 
-RUN wget $URL/$ZIP -O $DST/$ZIP && \
+RUN apt-get update && apt-get install -y openjdk-9-jre-headless && \
+    wget $URL/$ZIP -O $DST/$ZIP && \
     unzip $DST/$ZIP -d $DST && \
     rm $DST/$ZIP && \
     mv $DST/$FOLDER/* $DST && \
-    rmdir $DST/$FOLDER
+    rmdir $DST/$FOLDER && chmod +x $DST/fastqc
 
 WORKDIR /data/
-
-# CMD ["fastqc"]
+# fastqc binary is available in path, as a wrapper to java command
+# graphical interface needs X11, not available in container, only 
+# command-line should be used (non-interactive)
