update biotools label

--- a/samtools/1.10/Dockerfile
+++ b/samtools/1.10/Dockerfile
@@ -17,7 +17,7 @@ LABEL about.license_file="https://github.com/samtools/samtools"
 LABEL about.license_file="https://github.com/samtools/samtools/blob/develop/LICENSE"
 LABEL about.license="SPDX:MIT"
 LABEL about.tags="Genomics"
-LABEL extra.identifiers.biotools="SAM"
+LABEL extra.identifiers.biotools="SAMTOOLS"
 LABEL extra.binaries="samtools"
 
 ################## MAINTAINER ######################
