--- a/deepgoplus/1.0.0/Dockerfile
+++ b/deepgoplus/1.0.0/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.6
-
+MAINTAINER coolmaksat <coolmaksat@gmail.com>
 ################## METADATA ######################
 LABEL base_image="python:3.6"
 LABEL version="1"
@@ -7,7 +7,8 @@ LABEL software="DeepGOPlus"
 LABEL software.version="1.0.0"
 LABEL about.summary="DeepGOPlus is a novel method for predicting protein functions from protein sequences using deep neural networks combined with sequence similarity based predictions."
 LABEL about.home="http://deepgoplus.bio2vec.net/"
-LABEL about.license="BSD 3-Clause"
+LABEL about.license="SPDX:BSD-3-Clause"
+LABEL about.license_file="https://github.com/bio-ontology-research-group/deepgoplus/blob/master/LICENSE"
 LABEL extra.identifiers.biotools="deepgoplus"
 LABEL about.tags="Protein function prediction"
 
