--- a/nanosv/1.2.4/Dockerfile
+++ b/nanosv/1.2.4/Dockerfile
@@ -9,7 +9,7 @@ LABEL software="nanosv"
 LABEL software.version="1.2.4"
 LABEL about.summary="NanoSV is a software package that can be used to identify structural genomic variations in long-read sequencing data"
 LABEL about.home="https://github.com/mroosmalen/nanosv"
-LABEL about.documentation="https://github.com/BioContainers/specs/wiki"
+LABEL about.documentation="https://github.com/mroosmalen/nanosv"
 LABEL about.license_file="https://github.com/mroosmalen/nanosv/blob/master/LICENSE"
 LABEL about.license="MIT"
 LABEL about.tags="Nanopore,PacBio,Structural Variants"
