move fastqw to /opt/fastqc with symlink in /usr/local/bin, Closes #398

--- a/fastqc/0.11.9/Dockerfile
+++ b/fastqc/0.11.9/Dockerfile
@@ -3,7 +3,7 @@ FROM biocontainers/biocontainers:v1.1.0_cv2
 
 ################## METADATA ######################
 LABEL base_image="biocontainers:v1.1.0_cv2"
-LABEL version="7"
+LABEL version="8"
 LABEL software="fastqc"
 LABEL software.version="0.11.9"
 LABEL about.summary="A quality control tool for high throughput sequence data."
@@ -17,7 +17,7 @@ LABEL extra.binaries="fastqc"
 
 
 ################## MAINTAINER ######################
-MAINTAINER Alvin Chen <ychen@aperiomics.com>
+LABEL maintainer="Alvin Chen <ychen@aperiomics.com>"
 
 ################## INSTALLATION ######################
 USER root
@@ -25,15 +25,18 @@ USER root
 ENV ZIP=fastqc_v0.11.9.zip
 ENV URL=https://www.bioinformatics.babraham.ac.uk/projects/fastqc/
 ENV FOLDER=FastQC
-ENV DST=/home/biodocker/bin
+ENV DST=/opt/fastqc
 ENV ULOCAL=/usr/local/bin
+
+RUN mkdir -p $DST
 
 RUN apt-get update && apt-get install -y openjdk-8-jre-headless && \
     wget $URL/$ZIP -O $DST/$ZIP && \
     unzip $DST/$ZIP -d $DST && \
     rm $DST/$ZIP && \
     mv $DST/$FOLDER/* $DST && \
-    rmdir $DST/$FOLDER && chmod +x $DST/fastqc
+    rmdir $DST/$FOLDER && chmod +x $DST/fastqc && \
+    ln -s $DST/fastqc $ULOCAL/fastqc
 
 WORKDIR /data/
 # fastqc binary is available in path, as a wrapper to java command
