fix missing about.summary

--- a/conodictor/2.3.1/Dockerfile
+++ b/conodictor/2.3.1/Dockerfile
@@ -6,7 +6,7 @@ LABEL base_image="ubuntu:20.04"
 LABEL version="2"
 LABEL software="conodictor"
 LABEL software.version="2.3.1"
-LABEL about.description="Prediction of conopeptides superfamily from cone snail venom transcriptome."
+LABEL about.summary="Prediction of conopeptides superfamily from cone snail venom transcriptome."
 LABEL about.home="https://github.com/koualab/conodictor"
 LABEL about.license="MIT"
 LABEL about.license_file="https://github.com/koualab/conodictor/blob/master/LICENSE"
