add libfindbin-libs-perl to alien-hunter, error in deb package deps, Closes #424

--- a/alien-hunter/1.7-7-deb/Dockerfile
+++ b/alien-hunter/1.7-7-deb/Dockerfile
@@ -7,7 +7,7 @@ LABEL    software="alien-hunter" \
     about.home="http://www.sanger.ac.uk/science/tools/alien-hunter" \ 
     software.version="1.7-7-deb" \ 
     upstream.version="1.7" \ 
-    version="1" \ 
+    version="2" \ 
     about.copyright="2006-2008 George Vernikos" \ 
     about.license="GPL-2+" \ 
     about.license_file="/usr/share/doc/alien-hunter/copyright" \ 
@@ -16,5 +16,5 @@ LABEL    software="alien-hunter" \
 
 USER root
 ENV DEBIAN_FRONTEND noninteractive
-RUN apt-get update && (apt-get install -t buster-backports -y alien-hunter || apt-get install -y alien-hunter) && apt-get clean && apt-get purge && rm -rf /var/lib/apt/lists/* /tmp/*
+RUN apt-get update && (apt-get install -t buster-backports -y alien-hunter || apt-get install -y alien-hunter) && apt-get install -y libfindbin-libs-perl && apt-get clean && apt-get purge && rm -rf /var/lib/apt/lists/* /tmp/*
 USER biodocker
