--- a/avivator/0.12.3/Dockerfile
+++ b/avivator/0.12.3/Dockerfile
@@ -1,15 +1,5 @@
+#Stage 1: Compile and Build Avivator
 FROM ubuntu:20.04 as builder
-
-LABEL base_image="ubuntu:20.04, nginx:latest" \
-  version="1" \
-  software="avivator" \
-  software.version="0.12.3" \
-  about.summary="Avivator is a lightweight batteries-included WebGL viewer for remote imaging data, built around Viv. " \
-  about.home="https://github.com/hms-dbmi/viv/tree/master/avivator" \
-  about.license="MIT License" \
-  about.license_file="https://raw.githubusercontent.com/hms-dbmi/viv/master/LICENSE" \
-  about.documentation="http://viv.gehlenborglab.org/" \
-  maintainer="sunyi000@gmail.com"
 
 ARG DEBIAN_FRONTEND="noninteractive"
 
@@ -45,7 +35,20 @@ RUN npm install --unsafe-perm
 
 RUN npm run build:avivator
 
+#Stage 2: Serve app with nginx server
+
 FROM nginx:latest
+
+LABEL  base_image="ubuntu:20.04, nginx:latest" \
+  version="1" \
+  software="avivator" \
+  software.version="0.12.3" \
+  about.summary="Avivator is a lightweight batteries-included WebGL viewer for remote imaging data, built around Viv. " \
+  about.home="https://github.com/hms-dbmi/viv/tree/master/avivator" \
+  about.license="MIT License" \
+  about.license_file="https://raw.githubusercontent.com/hms-dbmi/viv/master/LICENSE" \
+  about.documentation="http://viv.gehlenborglab.org/" \
+  maintainer="sunyi000@gmail.com"
 
 COPY --from=builder /usr/local/app/viv/avivator/dist /usr/share/nginx/html
  
