--- a/avivator/0.12.3/Dockerfile
+++ b/avivator/0.12.3/Dockerfile
@@ -45,7 +45,7 @@ LABEL  base_image="ubuntu:20.04, nginx:latest" \
   software.version="0.12.3" \
   about.summary="Avivator is a lightweight batteries-included WebGL viewer for remote imaging data, built around Viv. " \
   about.home="https://github.com/hms-dbmi/viv/tree/master/avivator" \
-  about.license="MIT License" \
+  about.license="MIT" \
   about.license_file="https://raw.githubusercontent.com/hms-dbmi/viv/master/LICENSE" \
   about.documentation="http://viv.gehlenborglab.org/" \
   maintainer="sunyi000@gmail.com"
