--- a/test-ci/0.0.2/Dockerfile
+++ b/test-ci/0.0.2/Dockerfile
@@ -1,8 +1,8 @@
 ################# BASE IMAGE ######################
-FROM biocontainers/biocontainers:latest
+FROM debian:stable-slim
 
 ################## METADATA ######################
-LABEL base_image="biocontainers:latest"
+LABEL base_image="debian:stable-slim"
 LABEL version="4"
 LABEL software="testci"
 LABEL software.version="0.0.2"
@@ -10,6 +10,7 @@ LABEL about.summary="A test container for internal testing"
 
 LABEL about.home="https://biocontainers.pro/"
 LABEL about.license_file="gpl3+"
+LABEL about.license="spdx:GPL-3.0-or-later"
 LABEL about.tags="test"
 
 
